# hello-rye

./: README.md  pyproject.toml
src/hello_rye/: __init__.py  __main__.py
