[project]
name = "hello-rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yusaku Sekine", email = "yusaku.sekine@relic.co.jp" }
]
dependencies = [
    "flask>=3.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"hello-rye" = "hello_rye:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hello_rye"]
